--- a/userDocs/ParkManagerService.html
+++ b/userDocs/ParkManagerService.html
@@ -345,6 +345,124 @@
 				record of his waiting. There is not a queue of parking request but just an event of finish of the previous one.</li>
 		</ol>
 
+		<h3>Risk analysis</h3>
+
+		There are some risks involving the management of a physical area and storing valuable vehicles, discussed
+		in the tables below.
+
+		<h4>Table of Goods Evaluation</h4>
+		<table>
+			<tr>
+				<th>Good</th>
+				<th>Value</th>
+				<th>Exposure</th>
+			</tr>
+			<tr>
+				<td>System</td>
+				<td>High</td>
+				<td>High. Financial and image loss, System restoration cost. Parking unable to work</td>
+			</tr>
+			<tr>
+				<td>TOKENID</td>
+				<td>High</td>
+				<td>High. Could be used to steal a car. Financial and image loss.</td>
+			</tr>
+			<tr>
+				<td>Transport trolley</td>
+				<td>High</td>
+				<td>High. Could be used to steal or damage a car (bumping into it). Financial and image loss.</td>
+			</tr>
+			<tr>
+				<td>Faking temperature or stopping fan</td>
+				<td>Medium</td>
+				<td>Medium. Could result in a too hot environment that could cause the devices to fail</td>
+			</tr>
+			<tr>
+				<td>Status of the parking area</td>
+				<td>Low</td>
+				<td>Low. No useful data from those information</td>
+			</tr>
+		</table>
+
+		<h4>Table of threats and checks</h4>
+		<table>
+			<tr>
+				<th>Threat</th>
+				<th>Probability</th>
+				<th>Checks</th>
+				<th>Feasibility</th>
+			</tr>
+			<tr>
+				<td rowspan="2">Stole or guess of TOKENID</td>
+				<td rowspan="2">Low. It is quite long and generated as a cryptographically secure pseudo-random string</td>
+				<td>Limitation of the number of wrong TOKENID submitted</td>
+				<td>Low implementative cost</td>
+			</tr>
+			<tr>
+				<td>Operations log</td>
+				<td>Low implementative cost</td>
+			</tr>
+			<tr>
+				<td rowspan="2">Interception of communications between client and server</td>
+				<td rowspan="2">High. The system is Client/Server and the connection are done in insecure networks.</td>
+				<td>Asymmetric key communication encryption</td>
+				<td>Low implementative cost</td>
+			</tr>
+			<tr>
+				<td>Operations log</td>
+				<td>Low implementative cost</td>
+			</tr>
+			<tr>
+				<td rowspan="2">Control of the transport trolley</td>
+				<td rowspan="2">Medium. No encryption on the communication between it and the Service. No authentication to
+				submit commands</td>
+				<td>Add encryption and authentication</td>
+				<td>Medium. Needs to change the software provided by the customer</td>
+			</tr>
+			<tr>
+				<td>Use a secure network for the communication</td>
+				<td>Hardware cost for all the network devices that cannot be shared with other devices</td>
+			</tr>
+		</table>
+
+		<h4>Security Technology Analysis</h4>
+
+		<table>
+			<tr>
+				<th>Technology</th>
+				<th>Vulnerability</th>
+			</tr>
+			<tr>
+				<td>Use of TOKENID</td>
+				<td>
+					<ul>
+						<li>User reveals his TOKEN to third parties</li>
+						<li>TOKEN gets guessed from attackers with a bruteforce attack</li>
+					</ul>
+				</td>
+			</tr>
+			<tr>
+				<td>Communication encryption between Service and users</td>
+				<td><ul>
+					<li>Clients connects to a Server that proposes to use an insecure connection</li>
+					<li>Clients connects to a server that does not have a certificate that is considered reliable</li>
+					<li>The Server supports insecure or obsolete encryption protocols (e.g. less than TLSv1.2).</li>
+					<li>The Server uses keys with a low number of bits.</li>
+					<li>The Server's private key is stolen.</li>
+				</ul></td>
+			</tr>
+			<tr>
+				<td>Client/Server architecture</td>
+				<td>
+					<ul>
+						<li>Dos/DDos attack</li>
+						<li>Man in the Middle</li>
+						<li>Communication Sniffing</li>
+					</ul>
+				</td>
+			</tr>
+		</table>
+
 		<h3>List of requirements</h3>
 		<h4>Functional requirements</h4>
 		<ol class="custom functional">
@@ -370,6 +488,8 @@
 				interval of time</li>
 			<li>The trolley must go back to home when there are no more requests available</li>
 			<li>The trolley should not walk over parking-slots or obstacles</li>
+			<li>Creation of a log to track action done in the system and exchanged messages</li>
+			<li>Automatic mechanism of log analysis</li>
 		</ol>
 
 		<h4>Non-functional requirements</h4>
@@ -377,6 +497,7 @@
 			<li>The TOKENID generated must be secure and not easy to guess</li>
 			<li>The system can handle one client at a time, putting on hold further requests</li>
 			<li>It should be possible to swap between real sensor and simulated mock-objects with ease</li>
+			<li>Data stored and exchanged must be protected</li>
 		</ol>
 
 		<h3>System architecture</h3>
@@ -423,10 +544,11 @@
 		making them as active entities, we won't have the need to interact with polling. The following graphs show the
 		interaction between these devices and the ParkManagerService. -->
 
-		<img style="max-width: 100%" src="img/sensor-interaction-requirements.png" alt="sensor interaction">
+		<img style="max-width: 100%" src="img/sensor-interaction-requirements.png" alt="sensor interaction"><br>
 
 		<!-- codice già fornito per il sonar, è un oggetto, incapsularlo in un attore -->
 
+		<h3>Logical Architecture</h3>
 		The following image shows all the devices in the parking area, and how they are connected to each other.
 
 		<img style="max-width: 100%" src="img/logical-architecture-requirements.png" alt="logical architecture">
@@ -437,8 +559,10 @@
 
 	<h2>Problem analysis</h2>
 	<div class="remark">
-		<h4>Devices</h4>
-		A possible abstraction gap is the communication with all the different devices in the parking area:
+		<h3>Devices</h3>
+		It is now important to analyze how the devices are made and how they communicate with the ParkManagerService.
+		We already discussed that the devices are physically distant from each others and the Service, so they should
+		communicate with message-passing. More information on the hardware of the single components are reported below:
 		<ul>
 			<li><ks>weight sensor & thermometer</ks>: since it is physically distant from the other components, the ParkManagerService
 				should communicate with it via message-passing. It will then read the measurements from a physical or
@@ -459,10 +583,11 @@
 				The basic robot allows interacting with a virtual or some physical devices only changing a configuration file.
 		</ul>
 
-		<h5>Communication between devices</h5>
+		<h4>Communication between devices</h4>
 		Given the Requirements analysis it is now possible to define the interaction between all the devices in the System.<br>
 
 		<ul>
+			<li><ks>fan</ks>: accepts only start/stop commands</li>
 			<li><ks>outsonar</ks>: the customer provided us, besides the SonarAlone.c program, even some applications
 			that sends events for every reading or every bunch of readings. To avoid unnecessary traffic on the net it
 				is better to re-implement it, to make some processing on the outsonar and only send events when a car arrives or leaves.
@@ -471,8 +596,11 @@
 				sensors send events only when the read value goes over or lower a specific value written in a
 				configuration file in the device memory.
 			</li>
-			<li><ks>fan</ks>: accepts only start/stop commands</li>
 		</ul>
+		Since the behaviour of the three sensors is very similar, the same software will be deployed on all the
+		devices to make it possible to communicate between the sensor and the Service. The sensor specific logic will
+		be placed in a configuration file and the actual reading from the sensor will be done by a specific program
+		called by the connector. (forse una foto vale piu' di mille parole)
 
 		<img style="max-width: 100%" src="img/sensor-interaction.png" alt="Sensor interaction">
 		<br>
@@ -495,8 +623,15 @@
 		In this case, the Service has to be located in the neighborhood of all the sensors, while with encryption it
 		could be located everywhere and provide his services with a reduced risk of in-place maintenance.<br>
 		At this point, the two main alternatives are CoAP and WebSockets.
-		<h4>GUI interaction</h4>
+		<br><br>
 
+		<h3>GUI interaction</h3>
+
+		<img style="max-width: 100%" src="img/gui-interaction.png" alt="GUI interaction"><br>
+
+		The two GUIs are represented in a different context because the ParkManagerService could expose some APIs
+		completely independent of the GUIs, that can be served even by different machine or installed as mobile apps
+		on users' devices.
 
 
 
@@ -504,13 +639,7 @@
 
 
 
-		<h4>Logical architecture</h4>
-		The image above represents the logical architecture of the system.
-		<br>
 
-		The two GUIs are represented in a different context because the ParkManagerService could expose some APIs
-		completely independent of the GUIs, that can be served even by different machine or installed as mobile apps
-		on users' devices. A scheme of the API in OpenAPI format is available <a href="">here</a>.
 		<br>
 		It is also available an executable model of the system written in <a href="model.qak">qak language</a>.
 	</div>
