Changes by Alessandro

--- a/userDocs/ParkManagerService.html
+++ b/userDocs/ParkManagerService.html
@@ -548,6 +548,7 @@
 
 		<!-- codice già fornito per il sonar, è un oggetto, incapsularlo in un attore -->
 
+		<h3>Logical Architecture</h3>
 		The following image shows all the devices in the parking area, and how they are connected to each other.
 
 		<img style="max-width: 100%" src="img/logical-architecture-requirements.png" alt="logical architecture">
@@ -624,13 +625,7 @@
 
 
 
-		<h4>Logical architecture</h4>
-		The image above represents the logical architecture of the system.
-		<br>
 
-		The two GUIs are represented in a different context because the ParkManagerService could expose some APIs
-		completely independent of the GUIs, that can be served even by different machine or installed as mobile apps
-		on users' devices. A scheme of the API in OpenAPI format is available <a href="">here</a>.
 		<br>
 		It is also available an executable model of the system written in <a href="model.qak">qak language</a>.
 	</div>
