--- a/userDocs/ParkManagerService.html
+++ b/userDocs/ParkManagerService.html
@@ -208,12 +208,14 @@
         ol.custom.functional > li::before {
             content: "F" counter(number) ".";
             position: relative;
-            left:-5px
+            left:-5px;
+			color: #1632cc;
         }
         ol.custom.nonfunctional > li::before {
             content: "NF" counter(number) ".";
             position: relative;
-            left:-5px
+            left:-5px;
+            color: #1632cc;
         }
 	</style>
 
@@ -244,7 +246,9 @@
 			<li><ks>ParkManagerService</ks>: The software system which will implement the required automation functions;</li>
 			<li><ks>DDR robot</ks>: Differential Drive Robot. Has the form of a square of side length RD; (link al file del robot da costruire)</li>
 			<li><ks>transport trolley</ks>: A DDR robot which is used to move cars from the INDOOR to the selected
-				parking-slot;</li>
+				parking-slot. It can be in three different states: <k>idle</k>, the robot is waiting for the next command,
+				<k>working</k>, the robot is moving around the parking-area, executing a command, <k>stopped</k>, the robot
+				is stopped by the <ks>parking-manager</ks>;</li>
 			<li><ks>home</ks>: Starting position for the robot, located in the top-left corner of the environment. When the
 				robot completes a request, and there are no further instruction, it will return in this position;</li>
 			<li><ks>parking-area</ks>: Empty environment outside which the robot cannot go. It includes INDOOR, INDOOR-area,
@@ -322,10 +326,19 @@
 		The customer provides a
 		<a href="https://github.com/anatali/issLab2021/blob/main/it.unibo.kotlinSupports/app/src/main/kotlin/mapRoomKotlin/mapUtil.kt">library</a>
 		in Kotlin to represent the map of the parking-area.<br>
+		Below there is a representation of the parking area, the <k>X</k> represent the obstacles which the robot cannot
+		cross.
 
-		<img src="img/map.png" style="max-width: 70%" alt="Position of sensors in map"><br>
-		<img src="img/map2.png" style="max-width: 70%" alt="Non traversable positions in map"><br>
-
+		<table>
+			<tr>
+				<td>
+					<img src="img/map.png" style="max-width: 95%" alt="Position of sensors in map">
+				</td>
+				<td>
+					<img src="img/map2.png" style="max-width: 95%" alt="Non traversable positions in map">
+				</td>
+			</tr>
+		</table>
 		<h3>Additional user stories</h3>
 		In order to explain better some edge cases, some examples were made with the customer, reported below.<br>
 		<ks>Multiple users using the application</ks><br>
@@ -524,6 +537,15 @@
 
 		<img style="max-width: 100%" src="img/trolley-interaction.png" alt="trolley interaction">
 
+		<br>
+		As mentioned in the requirements, the transport trolley can be in three different states: <k>idle</k>, <k>working</k>
+		or <k>stopped</k>. The robot is <k>idle</k> if it is at home or returning home(moveToHome), after completing all
+		its requests. When the robot receives a new request (moveToIn, moveToSlotIn, moveToSlotOut, moveToOut), it
+		switches to the <k>working</k> state. If the robot is in the <k>working</k> state, and receives a new request
+		(moveToIn, moveToSlotIn, moveToSlotOut, moveToOut), it will serve that request after finishing the current one,
+		remaining in the <k>working</k> state.
+		Finally, the robot enter and exit the <k>stopped</k> state when receiving the stop and resume command.
+
 		<h4>Other devices</h4>
 		We have different devices in the parking area: weight-sensor, outsonar, thermometer, fan.
 
@@ -646,73 +668,88 @@
 
 	<h2>Test plans</h2>
 	<div class="remark">
-		<ol>
-			<li>client request a slot, and it's free: receive slotnum != 0 (RF1)</li>
-			<li>client request a slot, but there's no space: receive slotnum == 0 (RF1)</li>
-			<li>client request a slot, but there's still a client before him: new client wait</li>
-			<li>client press CARENTER, check: slot become occupied, check the behaviour of the system whenever the weightsensor detect a car</li>
-			<li>client pickup no error, check: slot become free, tokenid correspond, free outdoor area in tot time</li>
-			<li>client pickup, but the token does not correspond, error</li>
-			<li>client pickup, but there's still a client before him: new client wait</li>
-			<li>manager checkstatus, receive sensible value</li>
-			<li>temperature over TMAX, check if robot stop</li>
-			<li>manager start and stop robot</li>
-			<li>manager start and stop fan</li>
-		</ol>
+
+		<h3>Unit tests</h3>
 
 		<table style="width:100%" border="1">
+
+			<!-- TEST CAR ENTER (F1, F2, F3, F5, F6, F7) -->
+
 			<tr>
 				<td>
-					<h3>testRequestSlot</h3>
-					The client request a slot and there is one slot free.
-					<br/><b>Conditions</b>
+					<h4>testRequestSlot</h4>
+					The client requests a slot and there is one slot available, the weigthsensor don't detect a car in <!-- così (quindi bisogna controllare?) o precondizione INDOOR area is free -->
+					front of the INDOOR, and the transport trolley is either at home or working. (F1, F2, F7)
+					<br/><b>Conditions</b> <!-- e quindi questi sono anche i check|assert da fare nel test -->
 					<ul>
-						<li>The client receive 1 <= SLOTNUM <= 6</li>
-						<li>The selected slot become reserved???</li>
+						<li>The client receives 1 <= SLOTNUM <= 6</li>
+						<li>The client can move on with the booking</li>
+						<li>The selected slot becomes unavailable until further notice</li>
 					</ul>
 				</td>
-
 			</tr>
 
 			<tr>
 				<td>
-					<h3>testRequestSlotNoSlotsFree</h3>
-					The client request a slot but there is not a free slot.
+					<h4>testRequestSlotNoSlotsFree</h4>
+					The client requests a slot but there is not a free slot. (F1, F2, F7)
 					<br/><b>Conditions</b>
 					<ul>
-						<li>The client receive SLOTNUM == 0</li>
+						<li>The client receives SLOTNUM == 0</li>
+						<li>The client cannot proceed</li>
+					</ul>
+				</td>
+			</tr>
+
+			<tr>
+				<td>
+					<h4>testRequestSlotIndoorOccupied</h4>
+					The client requests a slot but there the weightsensor still detects a car. (F1, F2, F7)
+					<br/><b>Conditions</b>
+					<ul>
+						<li>The ParkServiceGUI notifies the client to wait before entering</li>
+					</ul>
+				</td>
+			</tr>
+
+
+			<!-- se il trolley non è al lavoro e non è a casa? -->
+
+			<tr>
+				<td>
+					<h4>testPressCarEnter</h4>
+					The client has received SLOTNUM between 1 and 6, left the car in front of the INDOOR-area and pressed
+					CARENTER (F3, F5, F6)
+					<br/><b>Conditions</b>
+					<ul>
+						<li>The client receives a unique tokenID</li>
+						<li>The INDOOR-area is freed</li>
+						<li>The selected parking slot become occupied</li>
+					</ul>
+				</td>
+			</tr>
+
+
+			<!-- TEST TRANSPORT TROLLEY (F4, F16, F17) -->
+			<!-- Test per ogni singola mossa? una sola mossa? -->
+			<tr>
+				<td>
+					<h4>testTransportTrolley</h4>
+					The ParkService send a command to the transport trolley (F4)
+					<br/><b>Conditions</b>
+					<ul>
+						<li>The transport trolley moves around the parking-area and arrives in the desired location</li>
+						<li>The INDOOR-area is freed???</li>
 						<li></li>
 					</ul>
 				</td>
 			</tr>
 
-			<tr>
-				<td>
-					<h3>testRequestSlotIndoorOccupied</h3>
-					The client request a slot, but there is still a client in the INDOOR-area
-					<br/><b>Conditions</b>
-					<ul>
-						<li>The system notifies the client to wait before entering</li>
-					</ul>
-				</td>
-			</tr>
+			<!-- TEST PICKUP (F8, F9, F10) -->
 
 			<tr>
 				<td>
-					<h3>testPressCarEnter</h3>
-					The client request a slot, but there is still a client in the INDOOR-area
-					<br/><b>Conditions</b>
-					<ul>
-						<li>The client receive a unique tokenID</li>
-						<li>The selected parking slot become occupied</li>
-						<li>?? The system weight the car ??</li>
-					</ul>
-				</td>
-			</tr>
-
-			<tr>
-				<td>
-					<h3>testClientPickup</h3>
+					<h4>testClientPickup</h4>
 					The client request to pick up his car by submitting the tokenID, and then leave
 					<br/><b>Conditions</b>
 					<ul>
@@ -725,8 +762,8 @@
 
 			<tr>
 				<td>
-					<h3>testClientPickupOutdoorOccupied</h3>
-					The client request to pick up his car by submitting the tokenID, but the OUTDOOR-area is occupied
+					<h4>testClientPickupOutdoorOccupied</h4>
+					The client request to pick up his car by submitting a valid tokenID, but the OUTDOOR-area is occupied
 					<br/><b>Conditions</b>
 					<ul>
 						<li>The tokenID is valid</li>
@@ -737,7 +774,7 @@
 
 			<tr>
 				<td>
-					<h3>testClientPickupWrongToken</h3>
+					<h4>testClientPickupWrongToken</h4>
 					The client request to pick up his car by submitting the tokenID, but the tokenID is not valid
 					<br/><b>Conditions</b>
 					<ul>
@@ -745,6 +782,20 @@
 					</ul>
 				</td>
 			</tr>
+
+			<tr>
+				<td>
+					<h4>testClientPickupStoppedTrolley</h4>
+					The client request to pick up his car by submitting a valid tokenID, but the parking trolley is stopped
+					<br/><b>Conditions</b>
+					<ul>
+						<li>The system notifies the client to wait</li>
+					</ul>
+				</td>
+			</tr>
+
+			<!-- TEST MANAGER (F11, F12, F13, F14, F15) -->
+
 		</table>
 	</div>
 
