--- a/userDocs/ParkManagerService.html
+++ b/userDocs/ParkManagerService.html
@@ -549,7 +549,9 @@
 		switches to the <k>working</k> state. If the robot is in the <k>working</k> state, and receives a new request
 		(moveToIn, moveToSlotIn, moveToSlotOut, moveToOut), it will serve that request after finishing the current one,
 		remaining in the <k>working</k> state.
-		Finally, the robot enter and exit the <k>stopped</k> state when receiving the stop and resume command.
+		Finally, the robot enter and exit the <k>stopped</k> state when receiving the stop and resume command.<br>
+
+		<img style="max-width: 100%" src="img/trolley-state.png" alt="Trolley state">
 
 		<h4>Other devices</h4>
 		We have different devices in the parking area: weight-sensor, outsonar, thermometer, fan.
