first scheme of sprint

--- a/userDocs/ParkManagerService.html
+++ b/userDocs/ParkManagerService.html
@@ -828,7 +828,28 @@
 
 	<h2>Project</h2>
 	<div class="remark">
-		<!-- dare una motivazione per gli sprint, perchè divido in una certa maniera e perchè faccio uno prima -->
+		The project will be divided in sprint
+
+		mettere tutto il codice su un docker per esecuzione facile
+
+		sprint1:
+		- mock dei devices
+		- park manager service (in grado di gestire carIn e carOut da richieste web)
+		- park manager service (in grado di gestire manager)
+		- entrambi quelli sopra con già call HTTP e definire API HTTP
+
+		sprint2:
+		- controllare il trolley e farlo muovere in giro per la mappa con i comandi detti in analisi
+
+		sprint3:
+		- interfaccia grafica manager e cliente
+
+		sprint4:
+		- device fisici
+
+		A scheme of the API in OpenAPI format is available <a href="">here</a>.
+		<!-- dare una motivazione per gli sprint, perchè divido in una certa maniera e perchè faccio uno prima
+		tecnologie e linguaggi nel primo sprint-->
 
 	</div>
 
