added link to the physical robot

--- a/userDocs/ParkManagerService.html
+++ b/userDocs/ParkManagerService.html
@@ -244,7 +244,7 @@
 		<h4>Nouns</h4>
 		<ul>
 			<li><ks>ParkManagerService</ks>: The software system which will implement the required automation functions;</li>
-			<li><ks>DDR robot</ks>: Differential Drive Robot. Has the form of a square of side length RD; (link al file del robot da costruire)</li>
+			<li><ks>DDR robot</ks>: Differential Drive Robot. Has the form of a square of side length RD (<a href="https://htmlpreview.github.io/?https://github.com/anatali/issLab2021/blob/main/it.unibo.qak21.basicrobot/userDocs/LabNanoRobot.html">link</a>)</li>
 			<li><ks>transport trolley</ks>: A DDR robot which is used to move cars from the INDOOR to the selected
 				parking-slot. It can be in three different states: <k>idle</k>, the robot is waiting for the next command,
 				<k>working</k>, the robot is moving around the parking-area, executing a command, <k>stopped</k>, the robot
